2005-05-01  0.9.11  Roland Clobus <rclobus@bigfoot.com>
	* server/gtk/gnocatan-server-gtk.c (main): Enabled translations in the
	menu.

2005-04-24  Brian Wellington <bwelling@xbill.org>
	* common/map.[ch]: Add map_add_hex().
	* client/gtk/gui.c, common/gtk/guimap.[ch]: Move map widget and
	event handling code to guimap.c

2005-04-24  Brian Wellington <bwelling@xbill.org>
	* common/gtk/guimap.[ch]: Add guimap_find_hex().

2005-04-20  Brian Wellington <bwelling@xbill.org>
	* client/ai/greedy.c: Fix a problem with the AI's monopoly card
	support.
	* client/gtk/guimap.[ch], client/gtk/Makefile.am,
	common/gtk/guimap.[ch], common/gtk/Makefile.am: Move map display
	code to common/gtk.

2005-04-21  0.9.10  Roland Clobus <rclobus@bigfoot.com>
	* client/callback.h, client/common/resource.c, common/buildrec.h,
	common/cost.c, common/cost.h, server/resource.c, server/server.h: Add
	const for function prototypes.
	* client/ai/greedy.c: Use cost_* functions

2005-04-20  Brian Wellington <bwelling@xbill.org>
	* client/gtk/frontend.h, client/gtk/gui.c, client/gtk/guimap.c,
	client/gtk/guimap.h, client/gtk/player.c, common/gtk/Makefile.am,
	common/gtk/colors.c, common/gtk/colors.h: Move non-client-specific
	code to common/gtk.

2005-04-20  0.9.9  Roland Clobus <rclobus@bigfoot.com>
	* rules.make, server/gnocatan-server-console.c: Add
	G_DISABLE_DEPRECATED, and replace the old functions.
	* server/gtk/gnocatan-server-gtk.c: Replace libgnomeui calls with
	libgnome and Gtk+ calls.
	* client/common/callback.c, client/gtk/gui.c, client/gtk/interface.c:
	No direct build of a city in the client. First a settlement has to be
	built.
	* common/network.c, meta-server/gnocatan-meta-server.c: Added code
	that will allow the tarball to be built under Cygwin. The client uses
	IPv4 functions, the server will not create listening sockets, and the
	metaserver will not create new games.

2005-04-19  Brian Wellington <bwelling@xbill.org>
	* configure.ac, Makefile.am, editor: Add gnocatan-editor.
