@@ -1,6 +1,9 @@
 2005-05-01  0.9.11  Roland Clobus <rclobus@bigfoot.com>
 	* server/gtk/gnocatan-server-gtk.c (main): Enabled translations in the
 	menu.
+	* editor/gtk/editor.c: Use GINT_TO_POINTER and GPOINTER_TO_INT
+	* editor/gtk/editor.c, editor/gtk/game-buildings.c,
+	editor/gtk/game-devcards.c: Enabled some translations.
 
 2005-04-24  Brian Wellington <bwelling@xbill.org>
 	* common/map.[ch]: Add map_add_hex().
